Sat Jan 14 09:35:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Messaging/ExceptionHolder_i.h:
          Fixed casing of include

Fri Jan 13 13:24:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1869_Regression/*:
          Added this regression to cvs, no fix yet and regression could
          be improved more to give more output to the user

Fri Jan 13 12:49:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Messaging/ExceptionHolder_i.{h,cpp}:
        * tao/Messaging/Messaging_ORBInitializer.{h,cpp}:
          Added a OBV Factory for the ExceptionHolder. At the moment we use
          AMI with collocation disabled the ExceptionHolder is marshaled
          and then tried to be demarshaled and then we need an OBV factory.
          For system exceptions things work fine now, for user exceptions
          always an UNKNOWN exception occurs in the _excep method, the
          meta data which user exceptions we could throw is not available
          in the current callstack so we just can't recreate the correct
          user exception, have to see how we could fix that but
          this is at least a good step in the direction. This only works
          for the new AMI mapping. This is part of the fix for bugzilla
          bug 2350. Thanks to Alan Stokes <alan at alanstokes dot org dot uk>
          for reporting this.

Fri Jan 13 12:30:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/AMI/simple_client.cpp:
          Print out the exception when we get a not expected exception

Fri Jan 13 11:43:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Valuetype/ValueBase.cpp:
          When no OBV Factory is found, throw a MARSHAL exception with
          minor code 1 and completed MAYBE. This fixes bugzilla bug
          2354

Fri Jan 13 04:57:20 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Transport.cpp:
