@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: TAO_CosEvent
 Description: TAO CosEvent Stub Library
-Requires: TAO
+Requires: TAO_AnyTypeCode, TAO
 Version: @VERSION@
 Libs: -L${libdir} -lTAO_CosEvent
 Cflags: -I${includedir}
