@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: TAO_CosNaming
 Description: TAO CosNaming Stub Library
-Requires: TAO
+Requires: TAO_AnyTypeCode, TAO
 Version: @VERSION@
 Libs: -L${libdir} -lTAO_CosNaming
 Cflags: -I${includedir}
