@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: TAO_CosTrading
 Description: TAO CosTrading Stub Library
-Requires: TAO
+Requires: TAO_AnyTypeCode, TAO
 Version: @VERSION@
 Libs: -L${libdir} -lTAO_CosTrading
 Cflags: -I${includedir}
